Added background notes and placeholders for other notes.

--- a/lec/common.tex
+++ b/lec/common.tex
@@ -7,7 +7,7 @@
 \newcommand{\hdr}[1]{
   \pagestyle{fancy}
   \lhead{Bindel, Summer 2018}
-  \rhead{Numerics for Data Science)}
+  \rhead{Numerics for Data Science}
   \fancyfoot{}
   \begin{center}
     {\large{\bf #1}}
