Update with HW.

--- a/hw/common.tex
+++ b/hw/common.tex
@@ -10,7 +10,7 @@
   \rhead{Numerical Methods for Data Science}
   \fancyfoot{}
   \begin{center}
-    {\large{\bf #1}}
+    {\large{\bf HW for #1}} \\ (due: #2)
   \end{center}
   \lstset{language=matlab,columns=flexible}
 }
